documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P71W32API ERRVAL __stdcall PC708_KernBegin(LPVOID *vxdptr,LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval);

P71W32API ERRVAL __stdcall PC708_KernDev(LPULONG valueptr,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernEnd(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernIntClear(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernIntInstall(LPVOID hEvent,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernIntStatus(LPINT valueptr,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernIntUninstall(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernIORdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernIOWrW(USHORT value,USHORT addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernMEMFillW(USHORT value,USHORT addrval,USHORT countval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernMEMRdsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernMEMRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernMEMWrsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernMEMWrW(USHORT value,USHORT addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_KernStatus(LPULONG valueptr,ULONG type,HCARD handleval);

P71W32API ULONG __stdcall PC708_ListConfig(ULONG configval,USHORT count,HCARD handleval);

P71W32API ULONG __stdcall PC708_MakeLong(USHORT valh,USHORT vall);

P71W32API ULONG __stdcall PC708_Mask(ULONG dataval,USHORT cntval);

P71W32API USHORT __stdcall PC708_MEMWINRdB(ULONG addrval,HCARD handleval);

P71W32API ULONG __stdcall PC708_MEMWINRdL(ULONG addrval,HCARD handleval);

P71W32API USHORT __stdcall PC708_MEMWINRdW(ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_MEMWINWrB(USHORT value,ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_MEMWINWrL(ULONG value,ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_MEMWINWrW(USHORT value,ULONG addrval,HCARD handleval);

P71W32API ULONG __stdcall PC708_Mod(ULONG moda,ULONG modb);

P71W32API BOOL __stdcall PC708_ModeIsBC(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsMon(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsNotBC(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsNotMon(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsNotRT(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsNotSerial(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsRT(HCARD handleval);

P71W32API BOOL __stdcall PC708_ModeIsSerial(HCARD handleval);

P71W32API USHORT __stdcall PC708_ModeRd(HCARD handleval);

P71W32API VOID __stdcall PC708_ModeWr(USHORT mode,HCARD handleval);

P71W32API ULONG __stdcall PC708_MonBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);

P71W32API ULONG __stdcall PC708_MonBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonClear(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonConfig(ULONG configval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_MonConfigExx(ULONG configval,ULONG seqaddr,ULONG moncount,USHORT cardnum,HCARD handleval);

P71W32API BOOL __stdcall PC708_MonIsRunning(HCARD handleval);

P71W32API USHORT __stdcall PC708_MonRd(LPUSHORT buf,HCARD handleval);

P71W32API USHORT __stdcall PC708_MonRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);

P71W32API BOOL __stdcall PC708_MonResume(HCARD handleval);

P71W32API BOOL __stdcall PC708_MonStart(HCARD handleval);

P71W32API BOOL __stdcall PC708_MonStatus(HCARD handleval);

P71W32API BOOL __stdcall PC708_MonStop(HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgBlockRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgBlockWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P71W32API USHORT __stdcall PC708_MsgCheck(MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_MsgCommRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);