documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS

        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernBegin@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        unsafe public static extern Int32 PC708_KernBegin(IntPtr* vxdptr, ref string cardname, UInt32 memval, UInt16 ioval, UInt16 irqval, UInt16 drqval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernDev@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernDev(ref UInt32 valueptr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernEnd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernIntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernIntClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernIntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernIntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernIntStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernIntStatus(ref Int32 valueptr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernIntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernIntUninstall(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernIORdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernIORdW(ref UInt16 valueptr, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernIOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernIOWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernMEMFillW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernMEMFillW(UInt16 value, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernMEMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernMEMRdsW(ref UInt16 bufptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernMEMRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernMEMRdW(ref UInt16 valueptr, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernMEMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernMEMWrsW(ref UInt16 bufptr, UInt16 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernMEMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernMEMWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_KernStatus@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_KernStatus(ref UInt32 valueptr, UInt32 typeval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ListConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_ListConfig(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MakeLong@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MakeLong(UInt16 valh, UInt16 vall);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_Mask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_Mask(UInt32 dataval, UInt16 cntval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MEMWINRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MEMWINRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MEMWINRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MEMWINRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MEMWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MEMWINRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MEMWINWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MEMWINWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MEMWINWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MEMWINWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MEMWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MEMWINWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_Mod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_Mod(UInt32 moda, UInt32 modb);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsBC(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsMon(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsNotBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsNotBC(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsNotMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsNotMon(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsNotRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsNotRT(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsNotSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsNotSerial(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsRT(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeIsSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ModeIsSerial(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_ModeRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ModeWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ModeWr(UInt16 mode, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MonBlkRd(ref UInt16 buf, UInt32 bufcount, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonBlkRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MonBlkRdEx(ref UInt16 buf, UInt32 bufcount, UInt32 maxblkcnt, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonConfig(UInt32 configval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonConfigEx(UInt32 configval, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonConfigExx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonConfigExx(UInt32 configval, UInt32 seqaddr, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonIsRunning(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MonRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MonRdEx(ref UInt16 buf, UInt16 bufcount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonResume(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonStart(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonStatus(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MonStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MonStop(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgBlockRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgBlockWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgCheck(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgCommRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
